shixun5/src/expr1-s2.output
Terminals unused in grammar

   UMINUS


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: EOL
    4     | exp EOL

    5 exp: exp PLUS term
    6    | exp MINUS term
    7    | term

    8 term: term MULT highfact
    9     | term DIV highfact
   10     | highfact

   11 highfact: fact
   12         | MINUS fact

   13 fact: NUMBER t
   14     | LB exp RB t

   15 t: EXPON fact
   16  | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 13
PLUS (259) 5
MINUS (260) 6 12
MULT (261) 8
DIV (262) 9
EXPON (263) 15
EOL (264) 3 4
LB (265) 14
RB (266) 14
UMINUS (267)


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
input (14)
    on left: 1 2, on right: 0 2
line (15)
    on left: 3 4, on right: 2
exp (16)
    on left: 5 6 7, on right: 4 5 6 14
term (17)
    on left: 8 9 10, on right: 5 6 7 8 9
highfact (18)
    on left: 11 12, on right: 8 9 10
fact (19)
    on left: 13 14, on right: 11 12 15
t (20)
    on left: 15 16, on right: 13 14


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    EOL     shift, and go to state 5
    LB      shift, and go to state 6

    line      go to state 7
    exp       go to state 8
    term      go to state 9
    highfact  go to state 10
    fact      go to state 11


State 2

    0 $accept: input $end .

    $default  accept


State 3

   13 fact: NUMBER . t

    EXPON  shift, and go to state 12

    $default  reduce using rule 16 (t)

    t  go to state 13


State 4

   12 highfact: MINUS . fact

    NUMBER  shift, and go to state 3
    LB      shift, and go to state 6

    fact  go to state 14


State 5

    3 line: EOL .

    $default  reduce using rule 3 (line)


State 6

   14 fact: LB . exp RB t

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LB      shift, and go to state 6

    exp       go to state 15
    term      go to state 9
    highfact  go to state 10
    fact      go to state 11


State 7

    2 input: input line .

    $default  reduce using rule 2 (input)


State 8

    4 line: exp . EOL
    5 exp: exp . PLUS term
    6    | exp . MINUS term

    PLUS   shift, and go to state 16
    MINUS  shift, and go to state 17
    EOL    shift, and go to state 18


State 9

    7 exp: term .
    8 term: term . MULT highfact
    9     | term . DIV highfact

    MULT  shift, and go to state 19
    DIV   shift, and go to state 20

    $default  reduce using rule 7 (exp)


State 10

   10 term: highfact .

    $default  reduce using rule 10 (term)


State 11

   11 highfact: fact .

    $default  reduce using rule 11 (highfact)


State 12

   15 t: EXPON . fact

    NUMBER  shift, and go to state 3
    LB      shift, and go to state 6

    fact  go to state 21


State 13

   13 fact: NUMBER t .

    $default  reduce using rule 13 (fact)


State 14

   12 highfact: MINUS fact .

    $default  reduce using rule 12 (highfact)


State 15

    5 exp: exp . PLUS term
    6    | exp . MINUS term
   14 fact: LB exp . RB t

    PLUS   shift, and go to state 16
    MINUS  shift, and go to state 17
    RB     shift, and go to state 22


State 16

    5 exp: exp PLUS . term

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LB      shift, and go to state 6

    term      go to state 23
    highfact  go to state 10
    fact      go to state 11


State 17

    6 exp: exp MINUS . term

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LB      shift, and go to state 6

    term      go to state 24
    highfact  go to state 10
    fact      go to state 11


State 18

    4 line: exp EOL .

    $default  reduce using rule 4 (line)


State 19

    8 term: term MULT . highfact

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LB      shift, and go to state 6

    highfact  go to state 25
    fact      go to state 11


State 20

    9 term: term DIV . highfact

    NUMBER  shift, and go to state 3
    MINUS   shift, and go to state 4
    LB      shift, and go to state 6

    highfact  go to state 26
    fact      go to state 11


State 21

   15 t: EXPON fact .

    $default  reduce using rule 15 (t)


State 22

   14 fact: LB exp RB . t

    EXPON  shift, and go to state 12

    $default  reduce using rule 16 (t)

    t  go to state 27


State 23

    5 exp: exp PLUS term .
    8 term: term . MULT highfact
    9     | term . DIV highfact

    MULT  shift, and go to state 19
    DIV   shift, and go to state 20

    $default  reduce using rule 5 (exp)


State 24

    6 exp: exp MINUS term .
    8 term: term . MULT highfact
    9     | term . DIV highfact

    MULT  shift, and go to state 19
    DIV   shift, and go to state 20

    $default  reduce using rule 6 (exp)


State 25

    8 term: term MULT highfact .

    $default  reduce using rule 8 (term)


State 26

    9 term: term DIV highfact .

    $default  reduce using rule 9 (term)


State 27

   14 fact: LB exp RB t .

    $default  reduce using rule 14 (fact)
